# CLI_py

./: crud.py  notes.py  pyproject.toml
