[tool.poetry]
name = "notes"
version = "0.1.0"
description = "note-taking cli"
authors = ["Bharathi <bharathiraghavan04@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notes = "notes:cli" #entry point